// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentPanel when component is set to a component renders a h3 tag containing the component name and a link to the component's page 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when component is set to just a component id renders a h3 tag containing the component id 1`] = `
"<div>
  <h3 class=\\"text-info\\">test-id</h3>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when component prop is undefined renders nothing 1`] = `""`;

exports[`ComponentPanel when description is set renders the description 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Description</h5>
    <div>
      <p>Description</p>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when links is set renders the links 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Links</h5>
    <ul>
      <li><a href=\\"https://example.org/test-1\\" target=\\"_blank\\">https://example.org/test-1</a> <br>
        <!---->
      </li>
      <li><a href=\\"https://example.org/test-2\\" target=\\"_blank\\">https://example.org/test-2</a> <br>
        <!---->
      </li>
    </ul>
  </div>
  <!---->
</div>"
`;

exports[`ComponentPanel when notes is set renders the notes 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Notes</h5>
    <div>
      <p>Notes</p>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when responsibilities is set renders the responsibilities 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <!---->
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Responsibilities</h5>
    <ul>
      <li>
        <div>
          <p>Test Description 1</p>
        </div>
      </li>
      <li>
        <div>
          <p>Test Description 2</p>
        </div>
      </li>
    </ul>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when tags is set renders the tags 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <!---->
  <!---->
  <!---->
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Tags</h5>
    <ul>
      <li>
        <!---->
      </li>
      <li>
        <!---->
      </li>
    </ul>
  </div>
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when teams is set renders the teams 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <!---->
  <!---->
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Teams</h5>
    <ul>
      <li><a href=\\"/teams/test-team-id-1\\" class=\\"team-name\\">test-team-id-1</a>
        <!---->
        <!---->
      </li>
      <li><a href=\\"/teams/test-team-id-2\\" class=\\"team-name\\">test-team-id-2</a>
        <!---->
        <!---->
      </li>
    </ul>
  </div>
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`ComponentPanel when techDebts is set renders the techDebts 1`] = `
"<div>
  <h3 class=\\"text-info\\">Test Name</h3> <a href=\\"/components/test-id\\" target=\\"_self\\" class=\\"btn my-1 btn-info\\">
    More Info
  </a>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div class=\\"my-4\\">
    <h5 class=\\"text-info\\">Tech Debts</h5>
    <ul>
      <li><span><span class=\\"badge badge-success\\">Missing Priority</span></span>
        <div>
          <p>Test Description 1</p>
        </div>
        <div></div>
        <!---->
      </li>
      <li><span><span class=\\"badge badge-success\\">Missing Priority</span></span>
        <div>
          <p>Test Description 2</p>
        </div>
        <div></div>
        <!---->
      </li>
    </ul>
  </div>
</div>"
`;
